# haihuozhe-backend

./: .gitignore  ADD_NEW_RULE.md  README.md  VERCEL_DEPLOYMENT_NOTE.md  app.py  build.py  pyproject.toml  requirements.txt  run.cmd  test_api.py  test_fix.py  vercel.json
api/: app.py
db/: user_storage.py
models/: push_rule.py  user.py
routes/: users.py
services/: base_push_service.py  dingtalk_service.py  push_service_manager.py
utils/: timeout_checker.py
