[tool.poetry]
name = "haihuozhe-backend"
version = "1.0.0"
description = "Check-in timeout monitoring backend for Haihuozhe project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
apscheduler = "3.10.4"
aiohttp = "3.9.1"
pydantic = "2.5.0"
python-multipart = "0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
app = "api.app:app"

[tool.vercel.scripts]
build = "python build.py"